fix body with margin-bottom
to extract extra space

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 
 body {
     margin: 0;
-    margin-bottom: 24px;
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     overflow-x: hidden;
